[코드 수정] 코드 수정본 올림

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/aidev?serverTimezone=Asia/Seoul
-    username: root
+    url: jdbc:mysql://52.79.146.68:3306/aidev?serverTimezone=Asia/Seoul
+    username: junhyop
     password: 1234
   jpa:
     show-sql: true
@@ -13,7 +13,7 @@ spring:
     multipart:
       max-file-size: 200MB
       max-request-size: 100MB
-      location: D:/test/
+      location: /home/ec2-user/catchMind/photo/
 server:
   port: 9999
 
